[package]
name = "ipld-daemon"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
async-std = "0.99"
async-trait = "0.1"
atty = "0.2"
caps = { git = "https://github.com/dvc94ch/caps-rs", branch = "misc" }
exitfailure = "0.5"
failure = "0.1"
libipld = { path = "../rust-ipld" }
multibase = { git = "https://github.com/multiformats/rust-multibase" }
signal-hook = "0.1"
sled = "0.28"
slog = "2.5"
slog-async = "2.3"
slog-journald = "2.1"
slog-term = "2.4"
structopt = "0.3.2"
tempdir = "0.3.7"
whoami = "0.5"

[dev-dependencies]
model = "0.1"
futures-preview = { version = "0.3.0-alpha.18", features = ["async-await", "nightly"] }

[profile.release]
debug = true
