[package]
name = "ipld-daemon-common"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
async-std = "0.99"
libipld = { git = "https://github.com/dvc94ch/rust-ipld" }
multibase = { git = "https://github.com/multiformats/rust-multibase" }
